# so_hackudo_ai

./: .env.example  .gitignore  README.md  agente_com_knowledge.py  main.py  pyproject.toml
docs/: dia-01-setup-e-primeira-integracao.md  dia-02-chat-roles-temperatura.md  dia-03-prompt-engineering.md  dia-04-tools-agno.md  dia-05-agno-avancado-agentui.md
docs/superpowers/plans/: 2026-07-20-nvidia-deepseek-v4-flash.md
docs/superpowers/specs/: 2026-07-20-nvidia-deepseek-v4-flash-design.md
knowledge/: playbook-ransomware.md
logs/: cves_2026.txt
tests/: test_agente_com_knowledge.py
tmp/lancedb/__manifest/_transactions/: 0-fa6a16ef-6d25-4c29-9023-13eba4e5bb21.txn
tmp/lancedb/soc_knowledge.lance/_transactions/: 0-20005873-4619-489a-944e-d994be8c68df.txn  1-4bfac5ca-b473-46b3-895d-85c7c9313a2f.txn
