[project]
name = "so-hackudo-ai"
version = "0.1.0"
description = "Um agente de IA Hacker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.12",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
